objects/Project_Flow__c.object
<CustomObject>
    <fields>
        <fullName>Exc_DateTIme__c</fullName>
        <label>Exc DateTIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception_Name__c</fullName>
        <externalId>true</externalId>
        <label>Exception</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uname__c</fullName>
        <label>Uname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Flow</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>